# sqlite-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
data/: flights-deleted.db  flights-initial.info  flights-populated.db  foo.txt  mydatabase.db  small.sqlite3
examples/: sqlite_info.rs
misc/: .gitignore  app-to-launch.sh  monitor.sh  qemu-server.sh
src/: file_header.rs  io.rs  lib.rs  log.rs  log_macros.rs  macros.rs  main.rs  pager.rs  result.rs  runtime.rs  traits.rs
src/file_header/: db_filesize_in_pages.rs  file_change_counter.rs  file_format_version_numbers.rs  freelist_pages.rs  incremental_vacuum_settings.rs  page_size.rs  payload_fractions.rs  reserved_bytes_per_page.rs  schema_format.rs
src/header/: application_id.rs  database_text_encoding.rs  db_filesize_in_pages.rs  freelist_pages.rs  magic_header_string.rs  mod.rs  page_size.rs  reserved_for_expansion.rs  schema_cookie.rs  suggested_cache_size.rs  user_version.rs  version_valid_for.rs  write_library_version.rs
src/io/: mod.rs
src/pager/: mod.rs  page.rs  tests.rs
src/pager/old_page/: lock_byte.rs  mod.rs  pointer_map.rs  tests.rs
src/pager/page/: btree.rs  freelist.rs  mod.rs  payload_overflow.rs  tests.rs
src/runtime/: internal_tables.rs  mod.rs  schema.rs
src/runtime/btree/: mod.rs
src/runtime/internal_tables/: sqlite_sequence.rs
src/sqlite_cli/: cli.rs  mod.rs  repl.rs  result.rs
src/sqlite_cli/cli/: database_file.rs  help.rs  mod.rs  traits.rs
src/sqlite_cli/repl/: dbinfo.rs  help.rs  mod.rs  open.rs  sql.rs  traits.rs
src/tests/: mod.rs
(+3 files in other folders)
